# contentrepo

./: .coverage 2  .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  data.json  docker-compose.yml  manage.py  pull_request_template.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.cfg  xlsx_helpers.py
.ci/: tag-from-ref.sh
.github/workflows/: build.yml  codeql-analysis.yml  deploy  deploy.yml
contentrepo/: urls.py  wsgi.py
contentrepo/settings/: base.py  dev.py  production.py  test.py
contentrepo/templates/: assessment_upload.html  base.html  orderedcontentset_upload.html  upload.html  whatsapptemplate_upload.html
home/: admin.py  api.py  api_v3.py  apps.py  assessment_import_export.py  constants.py  content_import_export.py  custom_paginator.py  export_assessments.py  export_content_pages.py  export_ordered_sets.py  export_whatsapp_templates.py  forms.py  generate_docs.py  generate_mermaid.py  helpers.py  import_assessment_pages.py  import_assessments.py  import_content_pages.py  import_helpers.py  import_ordered_content_sets.py  import_whatsapp_templates.py  llm.py  mappers.py  mixins.py  models.py  ordered_content_import_export.py  panels.py  parsingTestsTemp.py  serializers.py  serializers_v3.py  utils.py  views.py  wagtail_hooks.py  whatsapp.py  whatsapp_template_import_export.py  word_embedding.py  xlsx_helpers.py
home/docs/: contentpage_class_diagram.mmd  high_level_structure.mmd  page_tree_structure.mmd
home/migrations/: 0003_add_content_page.py  0003_contentpage.py  0004_auto_20210302_1213.py  0004_auto_20210329_0955.py  0005_add_content_limits.py  0006_use_text_fields_message_content.py  0007_add_struct_blocks.py  0008_alter_contentpage_whatsapp_body.py  0009_add_index_page.py  0010_contentpagerating.py  0011_add_index_api_fields.py  0012_auto_20211029_1014.py  0012_pageview.py  0013_alter_contentpage_body.py  0013_auto_20211217_1132.py  0014_contentpage_is_whatsapp_template.py  0015_alter_contentpage_is_whatsapp_template.py  0015_auto_20220602_1251.py  0016_auto_20220615_1123.py  0017_contentquickreply_contenttrigger_and_more.py  0017_pageview_platform_alter_contentpagetag_tag.py  0018_pageview_platform.py  0019_contentpage_related_pages.py  0020_pageview_message.py  0021_alter_contentpage_tags.py  0021_alter_contentquickreply_slug_and_more.py  0022_merge_20220927_1207.py  0023_alter_contentpage_whatsapp_body_sitesettings.py  0024_remove_sitesettings_content_variations_options_and_more.py  0025_alter_contentpage_whatsapp_body.py  0026_alter_sitesettings_profile_field_options.py  0026_orderedcontentset.py  0027_alter_orderedcontentset_options.py  0028_alter_orderedcontentset_profile_fields.py  0029_deduplicate_slugs.py  0030_contentpage_whatsapp_template_name.py  0030_unique_slug_contraint.py  0031_alter_contentpagerating_id_alter_contentpagetag_id_and_more.py  0032_alter_pageview_timestamp.py  0032_alter_pageview_timestamp_and_more.py  (+132 more)
home/templatetags/: container_tags.py  version_tags.py
home/tests/: bad-whatsapp-template-category.csv  content2.csv  content_newlines.csv  content_page_required_fields.csv  contentpage_index_required_fields.csv  contentpage_required_fields.csv  exported_content_20230905-variations.csv  exported_content_20230906-translations.csv  exported_content_20230911-variations-linked-page.csv  good-cpi-translation-key.csv  good-whatsapp-template-vars.csv  helpers.py  invalid-locale-name.csv  list_items.csv  missing-gotopage.csv  missing-parent.csv  missing-related-page.csv  multiple_messages.csv  no-translation-key-cp.csv  no-translation-key-cpi.csv  no-translation-key-default.csv  ordered_content.csv  output.json  page_builder.py  required_fields.csv  required_fields_sample.csv  test_api.py  test_api_v3.py  test_assessment_import_export.py  test_broken_links_clean_up.py  (+30 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_29d2a0ba3c071515_container_tags_py.html  z_29d2a0ba3c071515_version_tags_py.html  z_544371ef749f6f26_broken_links_clean_up_py.html  z_544371ef749f6f26_change_related_tag_to_related_page_py.html  z_544371ef749f6f26_import_json_content_py.html  z_544371ef749f6f26_import_json_content_turn_py.html  z_96751763047923e2_base_py.html  z_96751763047923e2_dev_py.html  z_96751763047923e2_test_py.html  z_a20243f409be1afc_admin_py.html  z_a20243f409be1afc_api_py.html  z_a20243f409be1afc_api_v3_py.html  z_a20243f409be1afc_assessment_import_export_py.html  z_a20243f409be1afc_constants_py.html  z_a20243f409be1afc_content_import_export_py.html  z_a20243f409be1afc_export_assessments_py.html  z_a20243f409be1afc_export_content_pages_py.html  z_a20243f409be1afc_export_ordered_sets_py.html  z_a20243f409be1afc_export_whatsapp_templates_py.html  z_a20243f409be1afc_forms_py.html  z_a20243f409be1afc_import_assessments_py.html  z_a20243f409be1afc_import_content_pages_py.html  z_a20243f409be1afc_import_helpers_py.html  z_a20243f409be1afc_import_ordered_content_sets_py.html  z_a20243f409be1afc_import_whatsapp_templates_py.html  z_a20243f409be1afc_mappers_py.html  z_a20243f409be1afc_mixins_py.html  z_a20243f409be1afc_models_py.html  z_a20243f409be1afc_ordered_content_import_export_py.html  z_a20243f409be1afc_panels_py.html  z_a20243f409be1afc_serializers_py.html  z_a20243f409be1afc_serializers_v3_py.html  z_a20243f409be1afc_views_py.html  z_a20243f409be1afc_wagtail_hooks_py.html  z_a20243f409be1afc_whatsapp_py.html  z_a20243f409be1afc_whatsapp_template_import_export_py.html  (+112 more)
kb/: 1.md  2.md
menu/: utils.py  views.py
pageview_graphs/: apps.py  views.py  wagtail_hooks.py
wiki/: About.md  Contentrepo-Releases.md  Deprecations.md  Design-Documentation.md  Forms.md  Home.md  Import-and-export.md  Import-export guide for ContentPages and WhatsAppTemplates.md  Import-export guide for ContentPages with linked WhatsAppTemplates.md  Infrastructure.md  Models.md  Rapidpro integration.md  Report.md  Suggested-workflow-with-Figma-for-complex-user-interactions.md  Understanding-the-API.md  Understanding-the-V2-API.md  contentpage-spreadsheet-view.md
(+181 files in other folders)
