[project]
name = "contentrepo"
version = "1.6.5-dev.0"
description = "A CMS for messaging systems"
authors = [
    { name = "Praekelt.org", email = "dev@praekelt.org" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "wagtail>=5.2.6,<5.3.0", # Latest LTS
    "django>=4.2.27,<4.3.0", # Latest LTS
    "dj-database-url>=2.1.0,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "django-environ>=0.11.2,<0.12.0",
    "wagtail-content-import>=0.11.0,<0.12.0",
    "wagtailmedia>=0.15.1,<0.16.0",
    "drf-spectacular>=0.27.1,<0.28.0",
    "openpyxl>=3.1.2,<4.0.0",
    "wagtail-modeladmin>=2.0.0,<3.0.0",
    # These aren't needed in tests, but are probably used in production:
    "django-storages>=1.14.2,<2.0.0",
    "django-redis>=5.4.0,<6.0.0",
    "sentry-sdk>=2.8.0,<3.0.0",
    "boto3>=1.34.56,<2.0.0",
    "pyparsing>=3.2.3,<4.0.0",
    "markdown>=3.10,<4.0",
]

[project.urls]
Homepage = "https://github.com/praekeltfoundation/contentrepo"
Repository = "https://github.com/praekeltfoundation/contentrepo"
"Bug Tracker" = "https://github.com/praekeltfoundation/contentrepo/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.2,<9.0.0",
    "pytest-django>=4.8.0,<5.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "ruff>=0.6.9,<0.7.0",
    "ty>=0.0.39,<0.1.0",
    "responses>=0.25.0,<0.26.0",
    "types-openpyxl>=3.1.0.20240301,<4.0.0",
    "types-requests>=2.31.0.20240311,<3.0.0",
    "django-stubs>=5.2.0,<6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "contentrepo",
    "home",
]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = [
    "wagtail==5.2.6",
    "wagtail-modeladmin==2.0.0",
    "wagtailmedia==0.15.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "contentrepo.settings.test"
addopts = "--cov"
filterwarnings = [
    # We can't do anything about these warnings until upstream updates.
    "ignore::django.utils.deprecation.RemovedInDjango50Warning:home.tests.test_forms:13",  # this comes from inside Django itself
    "ignore::django.utils.deprecation.RemovedInDjango51Warning:django.db.models.options:210",  # taggit.TaggedItem
    "ignore::DeprecationWarning:l18n.translation:17",
    "ignore::DeprecationWarning:openpyxl",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    "*/migrations/*.py",
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle + pyflakes == flake8 - mccabe
    "I",           # isort
    "UP",          # pyupgrade
    "S",           # flake8-bandit
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    # "DJ",          # flake8-django
    "PIE",         # flake8-pie
    # "PT",          # flake8-pytest-style
    "SIM",         # flake8-simplify
    "PTH",         # flake8-use-pathlib
    # "RUF",         # ruff-specific rules
]
ignore = [
    "E501",  # TODO: Something about these long lines.
    "S113",  # TODO: Request timeouts.
    "B904",  # TODO: Fix exceptions raised in exception handlers.
    "SIM102",  # It's often more convenient/readable to use nested conditionals.
]

[tool.ruff.lint.per-file-ignores]
"contentrepo/settings/**" = [
    "S105",  # TODO: Get rid of default DEFAULT_SECRET_KEY.
    "F405",  # We import * in settings files.
]
"**/tests/**" = [
    "S101",  # It's okay to use `assert` in tests.
]
"**/migrations/**" = [
    "E501",  # Long lines are okay in generated code.
    "I001",  # We don't care about import sorting in generated code.
    "UP",  # We don't care about new syntax in generated code.
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.analysis]
replace-imports-with-any = [
    "django.**",
    "openpyxl.**",
    "pytest.**",
    "pytest_django.**",
    "responses.**",
    "wagtail.**",
    "home.models",
    "home.models.**",
]

[tool.ty.rules]
redundant-cast = "ignore"
unused-type-ignore-comment = "ignore"

[tool.ty.src]
include = [
    "manage.py",
    "contentrepo",
    "home",
]
exclude = [
    "manage.py",
    "contentrepo",
    "home/management",
    "home/migrations",
    "home/admin.py",
    "home/apps.py",
    "home/api.py",
    "home/api_v3.py",
    "home/constants.py",
    "home/content_import_export.py",
    "home/forms.py",
    "home/mappers.py",
    "home/mixins.py",
    "home/models.py",
    "home/panels.py",
    "home/serializers.py",
    "home/serializers_v3.py",
    "home/views.py",
    "home/wagtail_hooks.py",
    "home/tests/utils.py",
    "home/tests/test_api.py",
    "home/tests/test_deduplicate_slugs_migration.py",
    "home/tests/test_json_import.py",
    "home/tests/test_api_v3.py",
    "home/tests/test_management.py",
    "home/tests/test_management_related_tag.py",
    "home/tests/test_models.py",
    "home/tests/test_unique_slug_hook.py",
    "home/tests/test_views.py",
    "home/tests/test_wagtail_hooks.py",
    "home/tests/test_whatsapp_template_name_migration.py",
    "home/tests/test_forms.py",
    "home/tests/test_management_import_json_content_turn.py",
]
